Fix width for slim pages on smaller browsers

--- a/assets/css/_style.scss
+++ b/assets/css/_style.scss
@@ -7,7 +7,7 @@ main {
   *zoom: 1;
 
   @media (max-width: $smallpage-limit) {
-    padding: 0px 20px;
+    margin: 0 20px;
     width: auto;
   }
 }
